--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Evan The Hobo Sol</title>
+  <title>Evan The Hobo On Sui</title>
   <meta
     content="At 3AM, $EVAN awakens, fueled by Monster Energy and borrowed liquidity from protocols that don’t even exist yet to protect trench warriors from getting rekd. In $EVAN We Trust."
     name="description">
@@ -168,9 +168,25 @@
         </div>
       </div>
     </div>
+    <img src="./images/sui.webp" style="    width: 100px;
+    height: 100px;
+    position: absolute;
+    border: 43px;
+    bottom: 19%;
+    left: -10px;
+    z-index: 100;
+" alt="" srcset="">
+    <img src="./images/sui.webp" style="    width: 100px;
+height: 100px;
+position: relative;
+border: 43px;
+bottom: 19%;
+left: -100px;
+z-index: 100;
+" alt="" srcset="">
     <div class="dock-absolute-2">
       <div class="dock">
-        <div class="app-icons"><a data-w-id="97e19928-59e4-85aa-7705-35e943a63be4" href="https://x.com/EvanOnSol"
+        <div class="app-icons"><a data-w-id="97e19928-59e4-85aa-7705-35e943a63be4" href="https://x.com/EvanHobo_Real"
             target="_blank" class="app-icon relative _1 w-inline-block">
             <div style="opacity:0" class="tooltip-float-readcv">
               <div class="tooltip center">
@@ -206,9 +222,8 @@
               </div><img loading="eager" src="fonts/673ce39f227b9421435fdaeb_tooltip-tail.svg" alt
                 class="tooltip-arrow bottom">
             </div>
-          </a><a data-w-id="97e19928-59e4-85aa-7705-35e943a63c06"
-            href="https://www.dextools.io/app/en/solana/pair-explorer/66NGSPspUYoF4rAAUa4So2XjkMtc9u5EpVjcg8N8dhCJ?t=1732286221755"
-            target="_blank" class="app-icon relative _1 last w-inline-block"><img
+          </a><a data-w-id="97e19928-59e4-85aa-7705-35e943a63c06" href="" target="_blank"
+            class="app-icon relative _1 last w-inline-block"><img
               sizes="(max-width: 479px) 15vw, (max-width: 767px) 100vw, (max-width: 1279px) 48px, (max-width: 1439px) 4vw, 64px"
               srcset="images/674097f5b39bf523bef63e4d_Dextools-p-500.png 500w, images/674097f5b39bf523bef63e4d_Dextools-p-800.png 800w, images/674097f5b39bf523bef63e4d_Dextools-p-1080.png 1080w, images/674097f5b39bf523bef63e4d_Dextools-p-1600.png 1600w, images/674097f5b39bf523bef63e4d_Dextools.png 2000w"
               alt src="images/674097f5b39bf523bef63e4d_Dextools.png" loading="eager" class="app-icon">
@@ -517,6 +532,8 @@ a,
           </div>
           <div class="one-list w-dyn-list">
             <div role="list" class="video-list w-dyn-items">
+              <!-- <img src="./images/sui.webp" style="position: relative;width: 50px;height: 50px;z-index: 99999999;" alt=""
+                srcset=""> -->
               <div role="listitem" class="colitem w-dyn-item"><a href="#" class="projects_video_linkbox w-inline-block">
                   <div class="video-aspect-box"><video loading="eager" preload="metadata" title="HOBO" loop
                       playsinline="true" muted class="video-element">
