--- a/index.html
+++ b/index.html
@@ -222,15 +222,15 @@ z-index: 100;
               </div><img loading="eager" src="fonts/673ce39f227b9421435fdaeb_tooltip-tail.svg" alt
                 class="tooltip-arrow bottom">
             </div>
-          </a><a data-w-id="97e19928-59e4-85aa-7705-35e943a63c06" href="" target="_blank"
-            class="app-icon relative _1 last w-inline-block"><img
+          </a><a data-w-id="97e19928-59e4-85aa-7705-35e943a63c06"
+            href="https://movepump.com/token/0xf0a4ff8aa6bca42286b01f1add3f3c7de711f6d6963aed5894f0ad387e5ef625::evan::EVAN"
+            target="_blank" class="app-icon relative _1 last w-inline-block"><img
               sizes="(max-width: 479px) 15vw, (max-width: 767px) 100vw, (max-width: 1279px) 48px, (max-width: 1439px) 4vw, 64px"
-              srcset="images/674097f5b39bf523bef63e4d_Dextools-p-500.png 500w, images/674097f5b39bf523bef63e4d_Dextools-p-800.png 800w, images/674097f5b39bf523bef63e4d_Dextools-p-1080.png 1080w, images/674097f5b39bf523bef63e4d_Dextools-p-1600.png 1600w, images/674097f5b39bf523bef63e4d_Dextools.png 2000w"
-              alt src="images/674097f5b39bf523bef63e4d_Dextools.png" loading="eager" class="app-icon">
+              alt src="images/BlueMove_logo.webp" loading="eager" class="app-icon">
             <div class="cmd-tab-hover"></div>
             <div style="opacity:0" class="tooltip-float-universe-2">
               <div class="tooltip center">
-                <p class="tooltip-text">Dextools</p>
+                <p class="tooltip-text">Buy on MovePump</p>
               </div><img loading="eager" src="fonts/673ce39f227b9421435fdaeb_tooltip-tail.svg" alt
                 class="tooltip-arrow bottom">
             </div>
