--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ z-index: 100;
               srcset="images/673ce7a03d7057514ffa5b1d_X%20logo%20testing-p-500.png 500w, images/673ce7a03d7057514ffa5b1d_X%20logo%20testing-p-800.png 800w, images/673ce7a03d7057514ffa5b1d_X%20logo%20testing-p-1080.png 1080w, images/673ce7a03d7057514ffa5b1d_X%20logo%20testing-p-1600.png 1600w, images/673ce7a03d7057514ffa5b1d_X%20logo%20testing.png 2000w"
               alt src="images/673ce7a03d7057514ffa5b1d_X%20logo%20testing.png" loading="eager" class="app-icon">
             <div class="cmd-tab-hover"></div>
-          </a><a data-w-id="97e19928-59e4-85aa-7705-35e943a63bf6" href="http://t.me/EVAN_Portal" target="_blank"
+          </a><a data-w-id="97e19928-59e4-85aa-7705-35e943a63bf6" href="https://t.me/EvanTheHobo_Portal" target="_blank"
             class="app-icon relative _1 figma-last w-inline-block">
             <div style="opacity:0" class="tooltip-float-figma">
               <div class="tooltip center">
